<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="chat_app_name">在线客服</string>
    <string name="action_settings">Settings</string>
    <string name="chat_title_name">在线客服</string>
    <string name="chat_zhaopian">照片</string>
    <string name="chat_paizhao">拍照</string>
    <string name="chat_luxiang">录像</string>
    <string name="chat_manyidu">满意度</string>
    <string name="chat_kefu">您好，请问有什么可以帮助您的？如果有以下问题，可直接点击了解哦~</string>
    <string name="chat_time">2016-12-02 12:00:55</string>
    <string name="chat_one">找回登录密码</string>
    <string name="chat_two">找回背包密码</string>
    <string name="chat_three">找回账号</string>
    <string name="chat_four">微信绑定问题</string>
    <string name="chat_five">微信红包问题</string>
    <string name="chat_six">声望问题(如何增长、有什么用？)</string>
    <string name="chat_seven">如何获得豆豆？</string>
    <string name="chat_eight">魔法表情使用方法(鲜花、拖鞋等)</string>
    <string name="chat_nigth">充值问题</string>
    <string name="chat_ten">其他问题</string>
    <string name="chat_send_photo">1/1</string>
    <string name="chat_picture">所有图片</string>
    <string name="chat_str_recorder_normal">按住 说话</string>
    <string name="chat_str_recorder_recording">松开 结束</string>
    <string name="chat_str_recorder_want_cancel">松开手指，取消发送</string>
    <string name="chat_str_recorder_cancel_send">手指上滑，取消发送</string>
    <string name="chat_edittext_notice_0">请输入内容...</string>
    <string name="chat_send">发送</string>
    <string name="chat_delete">删除</string>
    <string name="chat_copy">复制</string>
    <string name="chat_find_login_pwd">请输入要找回登录密码的游戏账号: 如何查看我的账号?</string>
    <string name="chat_handbag_pwd">请输入要找回背包密码的游戏账号: 如何查看我的账号?</string>
    <string name="chat_weixin_binding">请输入要查询微信绑定问题的游戏账号: 如何查看我的账号?</string>
    <string name="chat_weixin_red_packet">请输入要查询微信红包问题的游戏账号: 如何查看我的账号?</string>
    <string name="chat_reputation_problem">请选择您要咨询的问题: </string>
    <string name="chat_look">如何查看我的账号？</string>
    <string name="chat_hint">请输入您的游戏账号</string>
    <string name="chat_button">提交</string>
    <string name="chat_reputation_big">声望如何增长?</string>
    <string name="chat_reputation_big_1">1.声望等级是和游戏时间有关系的，游戏一分钟声望值增长1点，游戏时间越长，声望等级越高；</string>
    <string name="chat_reputation_big_2">2.声望值也可以通过"抽奖"获得；</string>
    <string name="chat_reputation_hava">声望有什么用?</string>
    <string name="chat_reputation_have_1">目前手机版本中显示的礼包是由账号声望等级决定的。声望级别不同，显示的礼包也就不同。关于声望的其他用途，这边正在努力完善中。敬请期待！</string>
    <string name="chat_doug_title">可以获得豆豆的方式方法如下: </string>
    <string name="chat_doug_1">1.当账号携带+背包中豆豆总和低于500豆时，系统会免费赠送888豆，并且每天赠送5次。</string>
    <string name="chat_doug_2">2.账号首次微信绑定成功后，可获赠2000豆豆。</string>
    <string name="chat_doug_3">3.账号首次手机绑定成功后，可获赠1000豆豆。</string>
    <string name="chat_doug_4">4.使用300元宝可以兑换60000豆豆。</string>
    <string name="chat_doug_5">5."每日抽奖"奖项中也有豆豆。</string>
    <string name="chat_doug_6">6.目前使用手机进行斗地主比赛，获得相应名名次也会奖励豆豆。</string>
    <string name="chat_doug_7">7.充值吉祥币，使用吉祥币购买道具，可以获赠豆豆。</string>
    <string name="chat_doug_8">8.手机登录吉祥棋牌，使用官方充值方式：微信、支付宝、银行卡等，可直接充值豆豆。</string>
    <string name="chat_doug_9">----------</string>
    <string name="chat_doug_10">如果以上回答尚未解决您的问题，请点击这里。</string>
    <string name="chat_doug_11">您也可以点击这里继续了解其他内容。</string>
    <string name="chat_magic_1">魔法表情的使用方法是：</string>
    <string name="chat_magic_2">进入游戏房间坐桌以后，点击你想发送道具表情的玩家头像，就会出现道具界面，之后您按照需求点击道具就可以了。</string>
    <string name="chat_magic_3">提示您：购买道具消耗的是您的背包中的豆豆。</string>
    <string name="chat_other_1">"豆"是否可以买卖、转让、兑换奖品或人民币？</string>
    <string name="chat_other_problem_1">游戏官方不会对豆豆进行任何形式的兑换或回收。如果淘宝等其非官方授权的第三方个人或组织有收回或兑换行为，都与吉祥棋牌无关。</string>
    <string name="chat_other_2">系统没赠豆</string>
    <string name="chat_other_problem_2">请输入您的游戏账号：</string>
    <string name="chat_other_3">礼品兑换问题</string>
    <string name="chat_other_4">如何更换/上传头像？</string>
    <string name="chat_other_problem_4_1">游戏中上传的头像不能涉及黄、赌、毒，等不雅、不发、攻击性或传播色情及其他违反社会公德的图片；不能带有手机号，微信号、qq号等买卖豆豆字样。</string>
    <string name="chat_other_problem_4_2">上传成功后请耐心等待，这边会有专人负责对上传的头像进行审核，审核通过后，您的游戏头像会自动更新。</string>
    <string name="chat_other_5">结算不对</string>
    <string name="chat_other_6">如何查看游戏规则？</string>
    <string name="chat_other_problem_6_1">例如：选择"长春麻将"→点击出现的各个场次的右上角"≡"，之后点击"规则"即可查看。</string>
    <string name="chat_other_7">反馈其他问题</string>
    <string name="chat_recharge_problem">当前没有客服在线，请您稍后再联系我们</string>
    <string name="chat_lianjiekefu">已接通客服，您现在可以发送消息了</string>
    <string name="chat_one_little">1.</string>
    <string name="chat_two_little">2.</string>
    <string name="chat_three_little">3.</string>
    <string name="chat_four_little">4.</string>
    <string name="chat_five_little">5.</string>
    <string name="chat_six_little">6.</string>
    <string name="chat_seven_little">7.</string>
    <string name="chat_eight_little">8.</string>
    <string name="chat_nine_little">9.</string>
    <string name="chat_ten_little">10.</string>
    <string name="chat_send1">发送</string>
    <string name="chat_look_photo">查看图片</string>
    <string name="chat_look_video">查看视频</string>
    <string name="chat_content_description">imageView</string>
    <string name="chat_network_text">网络连接不可用，请检查网络！</string>
    <string name="chat_evaluate_text">填写您的意见</string>
    <string name="chat_evaluate_title">请对本次服务进行评价</string>
    <string name="chat_evaluate_cancel">取消</string>
    <string name="chat_evaluate_submit">提交</string>
    <string name="chat_robot_title">这是一个导航</string>
    <string name="chat_robot_yes">是</string>
    <string name="chat_robot_no">否</string>
    <string name="chat_robot_know">不知道</string>
    <string name="chat_yes">确定</string>
    <string name="chat_back_title">返回将结束与客服聊天，确定返回吗？</string>

    <color name="chat_title_background">#ffffff</color>
    <color name="chat_evaluate_background">#F0F0F0</color>
    <color name="chat_background">#99ebebeb</color>
    <color name="chat_bottom_background">#55ebebeb</color>
    <color name="chat_bottom_background1">#aaebebeb</color>
    <color name="chat_xian">#aaaaaa</color>
    <color name="chat_gongneng">#a9000000</color>
    <color name="chat_kefutext">#ff000000</color>
    <color name="chat_kefutextcolor">#388bbb</color>
    <color name="chat_send_photo_color">#38393E</color>
    <color name="chat_photo_color">#55778899</color>
    <color name="chat_button_color">#727272</color>
    <color name="chat_from_content">#ff000000</color>
    <color name="chat_list_selector">#00000000</color>
    <color name="chat_network_unuse">#FDEDEE</color>
    <color name="chat_network_unuse_color">#656467</color>
    <color name="chat_framLayout">#FFFFFF</color>
    <color name="chat_robot_ubb">#EEEEEE</color>

    <string name="chat_title_activity_select_picture">SelectPictureActivity</string>
    <string name="chat_hello_world">Hello world!</string>
    <string name="chat_title_activity_send_photo">SendPhotoActivity</string>
    <string name="chat_title_activity_album">AlbumActivity</string>
    <string name="chat_title_activity_image">ImageActivity</string>
    <string name="chat_title_activity_video">VideoActivity</string>
    <string name="chat_title_activity_play_video">PlayVideoActivity</string>

</resources>