<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialogbackground"
    android:paddingBottom="4dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="25dp"
        android:paddingLeft="18dp"
        android:paddingRight="10dp"
        android:orientation="horizontal"
        android:paddingBottom="30dp" >

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_back_title"
            android:textColor="@color/chat_black"
            android:textSize="18sp" />
    </LinearLayout>



    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="1dp"
        android:background="@color/chat_gray" />

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:background="@color/chat_evaluate_background"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialogbackground"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/chat_evaluate_cancel"
            android:textSize="16sp"
            android:textColor="@color/chat_gray" />

        <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:background="@color/chat_gray" />

        <Button
            android:id="@+id/bt_commit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/dialogbackground"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/chat_yes" />
    </LinearLayout>

</LinearLayout>