<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialogbackground"
    android:orientation="vertical"
    android:paddingBottom="4dp" >

    <LinearLayout
        android:id="@+id/ll_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="7dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_evaluate_title"
            android:textColor="@color/chat_black"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginBottom="1dp"
        android:background="@color/chat_gray" />

    <TextView
        android:id="@+id/evaluate_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:text="@string/chat_evaluate_text"
        android:textColor="@color/chat_select_holit"
        android:textSize="17sp"
        android:visibility="gone" />

    <com.jixiang.chat.view.EvaluateView
        android:id="@+id/evaluate_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </com.jixiang.chat.view.EvaluateView>

    <EditText
        android:id="@+id/et_yijian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:maxLength="150"
        android:maxLines="3"
        android:background="@null"
        android:hint="@string/chat_evaluate_text"
        android:textColor="@color/chat_pingjia"
        android:textColorHint="@color/chat_pingjia"
        android:textSize="17sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="1dp"
        android:background="@color/chat_gray" />

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/chat_evaluate_background"
        android:orientation="horizontal"
        android:paddingLeft="1dp"
        android:paddingRight="1dp" >

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialogbackground"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/chat_evaluate_cancel"
            android:textColor="@color/chat_gray"
            android:textSize="16sp" />

        <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:background="@color/chat_gray" />

        <Button
            android:id="@+id/bt_commit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialogbackground"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/chat_evaluate_submit"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>