<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/chat_include" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/chat_gray" />

    <LinearLayout
        android:id="@+id/ll_network_unuse"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/chat_network_unuse"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44.9dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/chatwarning" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/chat_network_text"
                android:textColor="@color/chat_network_unuse_color"
                android:textSize="17sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/chat_gray" />
    </LinearLayout>

    <com.jixiang.chat.view.ContentListView
        android:id="@+id/lv_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7.5"
        android:background="@color/chat_background"
        android:cacheColorHint="@color/chat_transparent"
        android:divider="@null"
        android:listSelector="@color/chat_transparent"
        android:paddingBottom="10dp"
        android:paddingTop="5dp"
        android:transcriptMode="normal" />

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/chat_bottom_background"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/chat_gray" />

        <FrameLayout
            android:id="@+id/fl_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="7dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="7dp" >

                <ImageView
                    android:id="@+id/iv_voice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1.2"
                    android:contentDescription="@string/chat_content_description"
                    android:scaleType="centerInside"
                    android:src="@drawable/chat_voice1" />

                <ImageView
                    android:id="@+id/iv_keyboard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1.2"
                    android:contentDescription="@string/chat_content_description"
                    android:scaleType="centerInside"
                    android:src="@drawable/chat_keyboard1"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/et_chat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="6.4"
                    android:background="@null"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/chat_edittext_notice_0"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:singleLine="false"
                    android:textSize="17sp"
                    android:visibility="visible" />

                <com.jixiang.chat.voice.AudioRecorderButton
                    android:id="@+id/id_recorder_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="6.4"
                    android:background="@drawable/chat_btn_recorder_normal"
                    android:gravity="center"
                    android:minHeight="0dp"
                    android:text="@string/chat_str_recorder_normal"
                    android:textColor="@color/chat_button_color"
                    android:textSize="17sp"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/iv_biaoqing"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1.2"
                    android:contentDescription="@string/chat_content_description"
                    android:scaleType="centerInside"
                    android:src="@drawable/chat_biaoqing"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/iv_jiahao"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1.2"
                    android:contentDescription="@string/chat_content_description"
                    android:scaleType="centerInside"
                    android:src="@drawable/chat_jiahao" />

                <ImageView
                    android:id="@+id/iv_fasong"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1.2"
                    android:contentDescription="@string/chat_content_description"
                    android:scaleType="centerInside"
                    android:src="@drawable/chat_fasong"
                    android:visibility="gone" />
            </LinearLayout>
            
            <LinearLayout 
                android:id="@+id/ll_bottom_shield"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/chat_bottom_background1"
                android:visibility="visible"
                >
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_biaoqing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/chat_bottom_background"
        android:orientation="vertical"
        android:visibility="gone" >

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginBottom="8dp"
            android:background="@color/chat_gray" />

        <include
            android:id="@+id/chat_face_container"
            layout="@layout/chat_face_container" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_gongneng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/chat_bottom_background"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:visibility="gone" >

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/chat_gray" />

        <RadioGroup
            android:id="@+id/rg_buttons_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="3dp" >

            <RadioButton
                android:id="@+id/rb_xiangCe"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/chat_xiangce1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/chat_zhaopian"
                android:textColor="@color/chat_gongneng"
                android:textSize="13sp" />

            <RadioButton
                android:id="@+id/rb_paiZhao"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/chat_paizhao"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/chat_paizhao"
                android:textColor="@color/chat_gongneng"
                android:textSize="13sp" />
            

            <RadioButton
                android:id="@+id/rb_manYiDu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/chat_manyidu"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/chat_manyidu"
                android:textColor="@color/chat_gongneng"
                android:textSize="13sp" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>